add CSS and JS directories and apply each page's stylesheet. add assets directory.

--- a/public/about.html
+++ b/public/about.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>About Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
   <h1>About Weather App</h1>
+  <img src="./assets/robot.jpg" alt="robot image">
 </body>
 </html>
