--- a/public/help.html
+++ b/public/help.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Help</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/help.css">
 </head>
 <body>
   <h1>How can we help you?</h1>
