--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <h1>Welcome to your local app</h1>
+  <script src="./js/index.js"></script>
 </body>
 </html>
